--- a/resources/php.ini
+++ b/resources/php.ini
@@ -32,3 +32,11 @@ opcache.max_accelerated_files=10000
 opcache.revalidate_freq=60
 opcache.fast_shutdown=1
 opcache.enable_cli=1
+
+zend_extension=/usr/lib/php7/modules/xdebug.so
+
+xdebug.remote_enabled=on 
+xdebug.remote_autostart=off
+xdebug.remote_port=9000
+xdebug.remote_handler=dbgp
+xdebug.remote_connect_back=0
