--- a/resources/php.ini
+++ b/resources/php.ini
@@ -1,6 +1,6 @@
 [PHP]
 zend.multibyte=On
-date.timezone="America/New_York"
+date.timezone="America/Denver"
 display_startup_errors=On
 zend.enable_gc=Off
 include_path="/usr/local/lib/php"
